--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/kamerik"
         android:text="Sign Up"
-        android:textColor="#000000"
+        android:textColor="#640E0B"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/kamerik"
         android:text="Email Address"
-        android:textColor="#000000"
+        android:textColor="#640E0B"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +146,7 @@
         android:layout_marginBottom="11dp"
         android:fontFamily="@font/kamerik"
         android:text="Password"
-        android:textColor="#000000"
+        android:textColor="#640E0B"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
