--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:padding="20dp"
     tools:context=".CatalogFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp">
-
-
 
 
         <LinearLayout
@@ -27,11 +27,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Submit"
-                android:textStyle="bold"
+                android:text="Report Lost Items"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -39,12 +39,14 @@
                 android:orientation="vertical">
 
             </LinearLayout>
+
             <ImageView
                 android:id="@+id/uploadImage"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:layout_marginTop="10dp"
 
+                android:padding="30dp"
                 android:src="@drawable/upimage" />
 
             <EditText
@@ -70,17 +72,30 @@
                 android:textColor="@color/lavender" />
 
             <EditText
-                android:id="@+id/uploadLang"
+                android:id="@+id/uploadLand"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/round_corner"
                 android:gravity="start|center_vertical"
-                android:hint="Enter language"
+                android:hint="Landmark"
                 android:padding="16dp"
                 android:textColor="@color/lavender" />
 
 
+            <EditText
+                android:id="@+id/uploadDate"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_corner"
+                android:gravity="start|center_vertical"
+                android:ems="10"
+                android:hint="Date"
+                android:padding="16dp"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="none" />
 
             <Button
                 android:id="@+id/saveButton"
@@ -90,6 +105,7 @@
                 android:text="Submit"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
