--- a/app/src/main/res/layout/activity_splash_page.xml
+++ b/app/src/main/res/layout/activity_splash_page.xml
@@ -4,6 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1C981"
     tools:context=".SplashPage">
+
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333"
+        app:srcCompat="@drawable/find" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
