--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/white"
+    android:layout_marginBottom="10dp"
     android:padding="16dp">
 
     <TextView
@@ -25,5 +27,7 @@
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:paddingTop="2dp"
+        android:text="Ref:"
+        android:gravity="end"
         android:textColor="@android:color/darker_gray" />
 </LinearLayout>
