--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -13,10 +13,12 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="47dp"
             android:layout_marginTop="16dp"
-            android:gravity="center_horizontal"
+            android:fontFamily="@font/kamerik"
 
+            android:gravity="center_horizontal"
+            android:paddingTop="10dp"
             android:text="Notifications"
             android:textSize="24dp"
             android:textStyle="bold"
